--- a/css/cabecera.css
+++ b/css/cabecera.css
@@ -7,7 +7,8 @@
     left:0;
     top:0;
     right:0;
-  
+    height:27%;
+    
 
     
 }
@@ -21,40 +22,37 @@
 
 
 .texto{
-    float:left;
-    height:70px;
-    padding-top:15px;
-    padding-bottom: 15px;
-    padding-left: 39%;
-
+    float: left;
+    height: 40px;
+    width: 134px;
+    padding-top: 2%;
+    padding-left: 35%;
+    padding-right: 10%;
 
 }
 header h1{ 
 
-
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-style: oblique;
+    font-family: 'ABeeZee', sans-serif;
     color: white;
     text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
-    position: absolute;
-    background-image: url("images/fondo.jpg");  
+     
     text-align: center;
+    width:201px;
 
 }
 
 body{
     padding: 0;
     margin: 0;
-    background-image: url("images/fondo.jpg");
+    
 }
 .menu{
     display: block;
-    background-image: url("images/fondo.jpg");
-    position:relative;
-    width:100%;
-    height:fit-content;
-    padding-top: 15rem;
-    padding-left:1%;
+    width: fit-content;
+    height: fit-content;
+    padding-top: 20%;
+   
+    
 }
 ul{
     margin: 0;
@@ -63,7 +61,9 @@ ul{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
-    background-image: url("images/fondo.jpg");
+    width: 420px;
+    height: 53px;
+    padding-top: 100px;
 }
 ul li{
     display: inline-block;
@@ -114,8 +114,17 @@ ul li a span:hover:after{
     transform: rotateX(90deg) translateY(-10px);
 }
 
-.boton{
-    float:left;
+.boton1{
+    float: left;
+    padding-top: 3%;
+    padding-left: 7%;
+
+}
+.boton2{
+    float: left;
+    padding-top: 2%;
+    padding-left: 5%;
+   
 
 }
 
