--- a/css/contacto.css
+++ b/css/contacto.css
@@ -3,53 +3,35 @@ body{
     margin-left:2em;
 
 }
-header{
-    size: 20%;
-	display:block; 
-	color: blue; 
-	border-bottom:5px solid brown;
-}
-footer{
-    size: 10%;
-	border-top: 5px solid brown;
-	text-align:center;
-    clear: both;
-}
-ul.topnav {
-    size: 10%;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-.main{
+
+main{
+    margin-top: 10%;
     size: 100%;
     height: 100%;
-    position: relative;
+    width: 100%;
+    position: absolute;
 
 }
 .tituloContacto{
     height: 10%;
     width: 100%;
-    position: relative;
+    position: absolute;
 	text-align:center;
 }
 .p{
     size: 80%;
-    position: relative;
+    position: absolute;
+    width: 80%;
     padding-bottom: 10%;
-    padding-left: 5%;
+    padding-left: 8%;
     padding-right: 10%;
     padding-top: 7%;
 }
 .p1{
-    padding-left: 5%;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-
     background-color: #19c4be;
     height: 100%;
     width: 40%;
+    padding-left: 5%;
     float: left;
 
 }
@@ -74,7 +56,7 @@ ul.topnav {
 
 }
 
-.texto{
+.texto5{
     font-size: 82%;
 }
 .reloj{
