--- a/css/cabecera.css
+++ b/css/cabecera.css
@@ -3,7 +3,7 @@
 .cabecera{
     margin:auto;
     display: block;
-    position:fixed;
+    position: absolute;
     left:0;
     top:0;
     right:0;
@@ -51,7 +51,7 @@ body{
     width: fit-content;
     height: fit-content;
     padding-top: 12%;
-    position: fixed;
+    position: absolute;
     padding-left: 100%;
    
     
