--- a/css/pie.css
+++ b/css/pie.css
@@ -1,11 +1,16 @@
 footer{
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    margin-block-start: 5%;
-	border-top:5px solid rgb(105, 216, 170);
-	text-align:center;
+ 
+    border-top:5px solid rgb(105, 216, 170);
+    position:absolute;
+    text-align:center;
     clear: both;
-    background-image: url("images/fondo.jpg");
+    height:44px;
+    position:absolute;
+    bottom:0;
+    left:0;
+    right:0;
+    display:block;
+
+    
     
 }
