--- a/css/inicio_sesion.css
+++ b/css/inicio_sesion.css
@@ -6,7 +6,7 @@ main{
     height: 100%;
     width: 100%;
     position: absolute;
-    font-family: sans-serif;
+    font-family: 'ABeeZee', sans-serif;
 }
 
 .email{
