--- a/css/citas.css
+++ b/css/citas.css
@@ -65,3 +65,15 @@ main{
     padding-left: 5%;
 
 }
+.movimientoTexto3{
+    padding-left: 13%;
+
+}
+.movimientoTexto4{
+    padding-left: 8%;
+
+}
+.movimientoTexto5{
+    padding-left: 4%;
+
+}
