--- a/css/cabecera.css
+++ b/css/cabecera.css
@@ -54,7 +54,6 @@ body{
     display: block;
     width: fit-content;
     height: fit-content;
-    padding-top: 12%;
     position: absolute;
     padding-left: 100%;
    
@@ -127,10 +126,12 @@ ul li a span:hover:after{
 
 }
 .boton2{
-    float: left;
+    height: 70px;
+    width: 70px;
+    margin-left: auto;
     padding-top: 2%;
-    padding-left: 5%;
-   
+    padding-right: 5%;
+ 
 
 }
 
