--- a/css/form_alta_trabajador.css
+++ b/css/form_alta_trabajador.css
@@ -4,7 +4,7 @@ form{
     width: 100%;
     position: absolute;
     font-family: 'ABeeZee', sans-serif;
-    margin-bottom: 0%;
+    padding-bottom: 100px;
 }
 fieldset{
     margin-left: 6%;
