--- a/css/pie.css
+++ b/css/pie.css
@@ -4,7 +4,7 @@ footer{
     position:absolute;
     text-align:center;
     clear: both;
-    height:44px;
+    height: 4em;
     position:absolute;
     bottom:0;
     left:0;
