--- a/css/form_alta_cita.css
+++ b/css/form_alta_cita.css
@@ -1,22 +1,23 @@
 form{
     display: block;
     margin-top: 12%;
-    height: 61%;
+    height: 60%;
     width: 100%;
     position: absolute;
     font-family: 'ABeeZee', sans-serif;
-    padding-bottom: 50px;
+    
 }
 fieldset{
     margin-left: 25%;
     width: 50%;
-    margin-bottom: 10px;
+    margin-bottom: 100px;
+    
     
     
 
 }
 
-input[type=text], input[type=date],input[type=number],input[type=password] {
+input[type=text], input[type=date],input[type=number],input[type=password] ,input[type=select]{
 	width: 200px;
 	height: 25px;
 	font-size: small;
@@ -29,6 +30,21 @@ input[type=text], input[type=date],input[type=number],input[type=password] {
 	border-radius: 5px;
 	box-sizing: border-box;
 }
+
+select{
+    width: 200px;
+	height: 28px;
+	font-size: small;
+	background: white ;
+	padding: 6px 10px;
+	color: #000000;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #00ffff;
+	border-radius: 5px;
+	box-sizing: border-box; 
+}
+
 
 p{
     margin-left: 25%;
@@ -51,6 +67,7 @@ p{
     padding: 10px 20px 10px 20px;
     text-decoration: none;
     margin-left: 25%;
+    margin-bottom: 5%;
 
   }
   
