--- a/css/consulta_citas_gestor.css
+++ b/css/consulta_citas_gestor.css
@@ -1,22 +1,25 @@
 main{
-  margin-top: 14%;
+  margin-top: 16%;
   position: absolute;
-  margin-left: 33%;
+  margin-left: 36%;
   font-family: 'ABeeZee', sans-serif;
 }
 
-.botoncillo1{
-  margin: auto;
-  margin-left: 8%;
+
+div.botoncillo1{
+ 
   margin-top: 10%;
   height: 60px;
   width: 150px;
 
 }
 
-.botoncillo2{
-  margin-top: -13%;
+div.botoncillo2{
+  
   margin-left: 55%;
+  height: 60px;
+  width: 150px;
+  margin-top:-16%;
 
 }
 
