--- a/css/form_alta_trabajador.css
+++ b/css/form_alta_trabajador.css
@@ -75,3 +75,7 @@ select{
     background-image: linear-gradient(to bottom, #37dae6, #29d9ad);
     text-decoration: none;
   }
+
+  .error{
+    color:red;
+  }
