--- a/css/form_alta_cita.css
+++ b/css/form_alta_cita.css
@@ -80,3 +80,7 @@ p{
     background-image: linear-gradient(to bottom, #37dae6, #29d9ad);
     text-decoration: none;
   }
+
+  .error{
+    color:red;
+  }
