--- a/css/consulta_petcitas.css
+++ b/css/consulta_petcitas.css
@@ -104,3 +104,8 @@ table.consulta {
     background-image: linear-gradient(to bottom, #37dae6, #29d9ad);
     text-decoration: none;
   }
+
+  .error{
+    color:red;
+  }
+
